Refs #20268 - Update eea.converter documentation and demo buildout

--- a/buildouts/plone4/buildout.cfg
+++ b/buildouts/plone4/buildout.cfg
@@ -1,3 +1,13 @@
 [buildout]
 extends = versions.cfg
 package-name = eea.converter
+
+parts += wkhtmltopdf
+
+[wkhtmltopdf]
+recipe = hexagonit.recipe.download
+url = http://eggrepo.eea.europa.eu/pypi/wkhtmltopdf/wkhtmltopdf-0.12.1.tgz
+
+[instance]
+environment-vars +=
+    WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/wkhtmltopdf
