Updated egg repo URL, refs #25014

--- a/buildouts/plone4/buildout.cfg
+++ b/buildouts/plone4/buildout.cfg
@@ -15,7 +15,7 @@ mode = 0700
 
 [wkhtmltopdf]
 recipe = hexagonit.recipe.download
-url = http://eggrepo.eea.europa.eu/pypi/wkhtmltopdf/wkhtmltopdf-0.12.1.tgz
+url = http://eggrepo.apps.eea.europa.eu/pypi/wkhtmltopdf/wkhtmltopdf-0.12.1.tgz
 
 [instance]
 environment-vars +=
